--- a/index.html
+++ b/index.html
@@ -591,13 +591,13 @@ simply share information about your health and activity with your doctor.
 
 								<div style="background: url('images/world-map.png') no-repeat center center; background-size: 100%;">
 									<address>
-										Shoppersgood224<br>
+										Ecomscool<br>
 										3008  Sigley Road<br>
 										67432, Clay Center<br>
 									</address>
 									<abbr title="Phone Number"><strong>Phone:</strong></abbr> +1785-632-5330<br>
 									<abbr title="Fax"><strong>Fax:</strong></abbr> +1785-632-5332<br>
-									<abbr title="Web"><strong>Web:</strong></abbr> http://shoppersgood224.github.io<br>
+									<abbr title="Web"><strong>Web:</strong></abbr> http://ecomscool.github.io<br>
 								</div>
 
 							</div>
